add list elements

--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -1,2 +1,12 @@
+<h1>My first webpage!</h1>
+<h2>written with the guidance of epicodus.</h2>
 <p>this is my first website!</p>
 <p>isn't it awesome?!</p>
+
+<p>Here are some things I'm going to learn about coding:</p>
+<ul>
+  <li>HTML</li>
+  <li>CSS</li>
+  <li>JavaScript</li>
+  <li>And lots more!</li>
+</ul>
