add final, official HTML elements DOCTYPE, head, title, body

--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -1,3 +1,9 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <title>WEBPAGE #1!</title>
+</head>
+<body>
 <h1>My first webpage!</h1>
 <h2>written with the guidance of epicodus.</h2>
 <p>this is my first website!</p>
@@ -10,3 +16,5 @@
   <li>JavaScript</li>
   <li>And lots more!</li>
 </ul>
+</body>
+</html>
